--- a/.github/workflows/update.yml
+++ b/.github/workflows/update.yml
@@ -34,12 +34,13 @@ jobs:
       - name: Install nix
         uses: cachix/install-nix-action@v31
         with:
+          nix_path: nixpkgs=channel:nixos-unstable
           extra_nix_config: |
             experimental-features = nix-command flakes
             access-tokens = github.com=${{ secrets.GITHUB_TOKEN }}
 
       - name: Install tools
-        run: nix-env -iA nixpkgs.nix-update nixpkgs.just
+        run: nix profile install nixpkgs#nix-update nixpkgs#just
 
       - name: Update ${{ matrix.category }} packages
         run: just update-category ${{ matrix.category }}
